# My-SM2-simple

./: CMakeLists.txt  OTPclient.cpp  README.md  certify_client.old.cpp  certify_server.old.cpp
include/: TOTP.h
include/sm2/: sm2.h  sm2KDF.h  sm2StreamString.h  sm2calculators.h  sm2config.h  sm2encrypt.h  sm2init.h  sm2keymgr.h  sm2parameter.h  sm2pointcompress.h  sm2sigment.h  sm2type.h  sm3.h
src/: TOTP.cpp  sm4.cpp
src/sm2/: sm2KDF.cpp  sm2StreamString.cpp  sm2calculators.cpp  sm2config.cpp  sm2encrypt.cpp  sm2init.cpp  sm2keymgr.cpp  sm2pointcompress.cpp  sm2signment.cpp  sm3.c
